--- a/public/routesMap.html
+++ b/public/routesMap.html
@@ -24,8 +24,8 @@
     <div id="map-canvas"></div>
     <div id="right-panel">
         <p>Direct route duration: <span id="directTime"></span></p>
-        <p>Carpool duration: <span id="carpoolTime"></span></p>
-        <p>Time difference: <span id="difference"></span></p>
+        <p>Carpool duration: <span id="carpoolTime">No selection</span></p>
+        <p>Time difference: <span id="difference">No selection</span></p>
     </div>
     <div>
         <form>
