many changes to link pages together deve;loping a flow

--- a/public/Passenger.html
+++ b/public/Passenger.html
@@ -26,7 +26,7 @@
         <div id="topbar-responsive" class="topbar-responsive-links">
             <div class="top-bar-right">
                 <ul class="menu simple vertical medium-horizontal">
-                    <li><a href="#">Home</a></li>
+                    <li><a href="index.html">Home</a></li>
                     <li><a href="#">About</a></li>
                     <li><a href="#">Services</a></li>
                     <li><a href="#">Works</a></li>
@@ -54,7 +54,7 @@
             <label for="pass">Destination</label>
             <input type="text" id="dest" name="destination input" placeholder="Destination">
         </div>
-        <input class="button expanded" type="submit" value="Sign up">
+        <button type="submit" class="button expanded" value="Sign up">Sign Up</button>
     </form>
 
     <script src="js/vendor/jquery.js"></script>
