--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
         <div id="topbar-responsive" class="topbar-responsive-links">
           <div class="top-bar-right">
             <ul class="menu simple vertical medium-horizontal">
-              <li><a href="#">Home</a></li>
+              <li><a href="index.html">Home</a></li>
               <li><a href="#">About</a></li>
               <li><a href="#">Services</a></li>
               <li><a href="#">Works</a></li>
@@ -47,8 +47,8 @@
           <h1>DCC</h1>
           <h2>Daily Commuter Carpool</h2>
           <h5>Reduce traffic and air pullution, Help a hard worker, Make journey to work more sociable</h5>
-          <a class="button button-rounded-hover1">Register as a Passenger</a>
-          <a class="button button-rounded-hover2">Register as a <br> Driver</a>
+          <a href="Passenger.html"><button class="button button-rounded-hover1">Register as a Passenger</button></a>
+          <a href="Driver.html"><button class="button button-rounded-hover2">Register as a <br> Driver </button></a>
         </div>
       </div>
    
