Driver API construction functionnal

--- a/public/routesMap.html
+++ b/public/routesMap.html
@@ -23,14 +23,11 @@
             <input type="submit" value="Submit">
         </form>
     </div>
-
-
     <!-- Load the Google Maps aPI -->
     <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDE2yBUEZx3Cup_pwq22o_WferVgBpgSdE"></script>
 
-
     <!-- All of the script for multiple requests -->
-    <script type="text/javascript" src="js/bundle.js"></script>
+    <script type="text/javascript" src="js/routesMap.js"></script>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 </body>
