--- a/public/routesMap.html
+++ b/public/routesMap.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link type="text/css" rel="stylesheet" href="css/routesMap.css" />
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <title>Document</title>
 
 </head>
@@ -14,9 +15,9 @@
     <!-- Somewhere in the DOM for the map to be rendered -->
     <div id="map-canvas"></div>
     <div id="right-panel">
-        <p>Direct route duration: <span id="directTime"></span></p>
-        <p>Carpool duration: <span id="carpoolTime">No selection</span></p>
-        <p>Time difference: <span id="difference">No selection</span></p>
+        <p>Direct route duration: <span style="color: darkblue;" id="directTime"></span></p>
+        <p>Carpool duration: <span style="color: darkblue;" id="poolTime">No selection</span></p>
+        <p>Time difference: <span style="color: darkblue;" id="difference">No selection</span></p>
     </div>
     <div>
         <form>
@@ -29,7 +30,10 @@
     <!-- All of the script for multiple requests -->
     <script type="text/javascript" src="js/routesMap.js"></script>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <!-- All of the script for multiple requests -->
+    <script type="text/javascript" src="js/durations.js"></script>
+
+
 </body>
 
 </html>
