--- a/public/Driver.html
+++ b/public/Driver.html
@@ -40,26 +40,27 @@
         </div>
     </nav>
 
-    <form class="callout text-center">
+    <form id="driver-form" class="callout text-center ">
         <h2>Driver Register</h2>
-        <div class="floated-label-wrapper">
+        <div class="floated-label-wrapper ">
             <label for="full-name">Full name</label>
-            <input type="text" id="full-name" name="full name input" placeholder="Full name">
+            <input type="text" id="name" name="name" placeholder="Name ">
         </div>
-        <div class="floated-label-wrapper">
-            <label for="email">Email</label>
-            <input type="email" id="email" name="email input" placeholder="Email">
+        <div class="floated-label-wrapper ">
+            <label for="origin">Origin</label>
+            <input type="origin " id="origin" name="origin" placeholder="Origin ">
         </div>
-        <div class="floated-label-wrapper">
-            <label for="pass">Destination</label>
-            <input type="text" id="dest" name="destination input" placeholder="Destination">
+        <div class="floated-label-wrapper ">
+            <label for="pass ">Destination</label>
+            <input type="text " id="destination" name="destination" placeholder="Destination ">
         </div>
         <input class="button expanded" type="submit" value="Sign up">
     </form>
-    <script src="js/vendor/jquery.js"></script>
-    <script src="js/vendor/what-input.js"></script>
-    <script src="js/vendor/foundation.js"></script>
-    <script src="js/app.js"></script>
+    <script src="js/vendor/jquery.js "></script>
+    <script src="js/vendor/what-input.js "></script>
+    <script src="js/vendor/foundation.js "></script>
+    <!-- <script src="js/app.js "></script> -->
+    <script src="js/driver.js "></script>
 </body>
 
 </html>
