--- a/public/routesMap.html
+++ b/public/routesMap.html
@@ -18,6 +18,15 @@
         <p>Direct route duration: <span style="color: darkblue;" id="directTime"></span></p>
         <p>Carpool duration: <span style="color: darkblue;" id="poolTime">No selection</span></p>
         <p>Time difference: <span style="color: darkblue;" id="difference">No selection</span></p>
+        <form class="passengers">
+            <input type="checkbox" value="passenger1">
+            <label for="passenger1"> Passenger 1</label><br>
+            <input type="checkbox" value="passenger2">
+            <label for="passenger2"> Passenger 2</label><br>
+            <input type="checkbox" value="passenger3">
+            <label for="passenger3"> Passenger 3</label><br>
+            <input id="route" type="submit" value="Submit">
+        </form>
     </div>
     <div>
         <form>
