html and css changes

--- a/public/index.html
+++ b/public/index.html
@@ -33,7 +33,7 @@
                     <li><a href="#">News</a></li>
                     <li><a href="#">Contact</a></li>
                     <li>
-                        <button type="button" class="button hollow topbar-responsive-button">Categories</button>
+                        <button type="button" class="button hollow topbar-responsive-button">Login</button>
                     </li>
                 </ul>
             </div>
@@ -49,7 +49,7 @@
             <h5>Reduce traffic and air pullution, Help a hard worker, Make journey to work more sociable</h5>
             <a class="button button-rounded-hover1">Register as a Passenger</a>
             <a class="button button-rounded-hover2">Register as a <br> Driver</a>
-            <a class="button button-rounded-hover2">Login</a>
+            
         </div>
     </div>
 
