Frontend html update, select input for user type

--- a/public/Passenger.html
+++ b/public/Passenger.html
@@ -43,7 +43,7 @@
     <form id="passenger-form" class=" callout text-center ">
         <h2>Passenger Register</h2>
         <div class="floated-label-wrapper ">
-            <label for="full-name ">Full name</label>
+            <label for="full-name ">Name</label>
             <input type="text" id="name" name="name" placeholder="Full name ">
         </div>
         <div class="floated-label-wrapper ">
