--- a/public/routesMapPassenger.html
+++ b/public/routesMapPassenger.html
@@ -15,8 +15,7 @@
     <!-- Somewhere in the DOM for the map to be rendered -->
     <div id="map-canvas"></div>
     <div id="right-panel">
-        <h1 id="userType">Driver</h1>
-        <h1 id="userType">Passenger</h1>
+        <h1 id="userPassenger">Passenger</h1>
         <p>Direct route duration: <span style="color: darkblue;" id="directTime"></span></p>
         <p>Carpool duration: <span style="color: darkblue;" id="poolTime">No selection</span></p>
         <p>Time difference: <span style="color: darkblue;" id="difference">No selection</span></p>
