--- a/public/Driver.html
+++ b/public/Driver.html
@@ -43,16 +43,16 @@
     <form id="driver-form" class="callout text-center ">
         <h2>Driver Register</h2>
         <div class="floated-label-wrapper ">
-            <label for="full-name">Full name</label>
-            <input type="text" id="name" name="name" placeholder="Name ">
+            <label for="full-name ">Name</label>
+            <input type="text" id="name" name="name" placeholder="Full name ">
         </div>
         <div class="floated-label-wrapper ">
-            <label for="origin">Origin</label>
-            <input type="origin " id="origin" name="origin" placeholder="Origin ">
+            <label for="origin ">Origin</label>
+            <input type="text" id="origin" name="origin" placeholder="Origin">
         </div>
         <div class="floated-label-wrapper ">
             <label for="pass ">Destination</label>
-            <input type="text " id="destination" name="destination" placeholder="Destination ">
+            <input type="text" id="destination" name="destination" placeholder="Destination ">
         </div>
         <input class="button expanded" type="submit" value="Sign up">
     </form>
