--- a/public/Passenger.html
+++ b/public/Passenger.html
@@ -8,11 +8,10 @@
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.0/jquery.min.js"></script>
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Foundation for Sites</title>
+    <title>passenger register</title>
     <link rel="stylesheet" href="css/foundation.css">
     <link rel="stylesheet" href="css/app.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
-    <title>Document</title>
 </head>
 
 <body>
@@ -44,7 +43,7 @@
         <h2>Passenger Register</h2>
         <div class="floated-label-wrapper ">
             <label for="full-name ">Name</label>
-            <input type="text" id="name" name="name" placeholder="Full name ">
+            <input type="text" id="name" name="name" placeholder="Name">
         </div>
         <div class="floated-label-wrapper ">
             <label for="origin ">Origin</label>
