passenger and driver js file script tags on map html

--- a/public/routesMap.html
+++ b/public/routesMap.html
@@ -44,7 +44,12 @@
     <!-- All of the script for multiple requests -->
     <script type="text/javascript" src="js/durations.js"></script>
 
-    <script type="text/javascript" src="js/continue.js"></script>
+    <!-- <script type="text/javascript" src="js/continue.js"></script> -->
+
+    <script type="text/javascript" src="js/passenger.js"></script>
+
+    <script type="text/javascript" src="js/driver.js"></script>
+
 
 
 </body>
