Map html tables and select tags

--- a/public/priver.html
+++ b/public/priver.html
@@ -53,7 +53,7 @@
             <label for="pass ">Destination</label>
             <input type="text" id="destination" name="destination" placeholder="Destination ">
         </div>
-        <input class="button expanded" type="submit" value="Sign up">
+        <input onclick="location.href='http://localhost:8080/';" class="button expanded" type="submit" value="Sign up">
     </form>
     <script src="js/vendor/jquery.js "></script>
     <script src="js/vendor/what-input.js "></script>
