--- a/public/Passenger.html
+++ b/public/Passenger.html
@@ -51,7 +51,7 @@
         </div>
         <div class="floated-label-wrapper ">
             <label for="pass ">Destination</label>
-            <input type="text" id="destination" name="destination" placeholder="Destination ">
+            <input onclick="location.href='http://localhost:8080/';" type="text" id="destination" name="destination" placeholder="Destination ">
         </div>
         <input class="button expanded" type="submit" value="Sign up ">
     </form>
