--- a/public/driver.html
+++ b/public/driver.html
@@ -8,11 +8,10 @@
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.0/jquery.min.js"></script>
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Log in</title>
+    <title>Driver register</title>
     <link rel="stylesheet" href="css/foundation.css">
     <link rel="stylesheet" href="css/app.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
-    <title>Document</title>
 </head>
 
 <body>
@@ -40,43 +39,29 @@
         </div>
     </nav>
 
-    <form id="continue-form" class="callout text-center">
-        <h2>User Information </h2>
-        <div class="floated-label-wrapper">
-            <label for="full-name">Name</label>
-            <input type="text" id="name" name="full name input" placeholder="Name">
+    <form id="driver-form" class="callout text-center ">
+        <h2>Driver Register</h2>
+        <div class="floated-label-wrapper ">
+            <label for="full-name ">Name</label>
+            <input type="text" id="name" name="name" placeholder="Name">
         </div>
-        <div class="floated-label-wrapper">
-            <label for="pass">Destination</label>
+        <div class="floated-label-wrapper ">
+            <label for="origin ">Origin</label>
             <input type="text" id="origin" name="origin" placeholder="Origin">
         </div>
-        <div class="floated-label-wrapper">
-            <p style="float:left">User type</p>
-            <select id="userType" style=" width: 60%; ">
-                <option value="Driver ">Driver</option>
-                <option value="Passenger">Passenger</option>
-              </select>
+        <div class="floated-label-wrapper ">
+            <label for="pass ">Destination</label>
+            <input type="text" id="destination" name="destination" placeholder="Destination ">
         </div>
-        <input onclick="location.href='http://localhost:8080/map';" class="button button-rounded-hover4" type="submit" value="Submit">
+        <!-- <input onclick="location.href='http://localhost:8080/';" class="button expanded" type="submit" value="Sign up"> -->
+        <input class="button expanded" type="submit" value="Sign up">
     </form>
-    <div class="button-group continue-form ">
 
-    </div>
     <script src="js/vendor/jquery.js "></script>
     <script src="js/vendor/what-input.js "></script>
     <script src="js/vendor/foundation.js "></script>
-    <script src="js/app.js "></script>
-    <script src="js/continue.js "></script>
-
-</html>
-
-
-</html>
-
-</html>
-
+    <!-- <script src="js/app.js "></script> -->
+    <script src="js/driver.js "></script>
 </body>
-
-</html>
 
 </html>
