--- a/public/index.html
+++ b/public/index.html
@@ -46,7 +46,7 @@
             <h5>Reduce traffic and air pullution, Help a hard worker, Make journey to work more sociable</h5>
             <a href="http://localhost:8080/passenger" class="button button-rounded-hover1">Join as <br> a Passenger</a>
             <a href="http://localhost:8080/driver" class="button button-rounded-hover2">Join as a <br> Driver</a>
-            <a href="http://localhost:8080/continue" class="button button-rounded-hover5"> User<br> continue</a>
+            <a href="http://localhost:8080/login" class="button button-rounded-hover5"> Login as a<br> User</a>
         </div>
     </div>
 
