Manage user profile display - set navbar href

--- a/public/driver.html
+++ b/public/driver.html
@@ -25,14 +25,19 @@
         <div id="topbar-responsive" class="topbar-responsive-links">
             <div class="top-bar-right">
                 <ul class="menu simple vertical medium-horizontal">
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">About</a></li>
-                    <li><a href="#">Services</a></li>
-                    <li><a href="#">Works</a></li>
-                    <li><a href="#">News</a></li>
-                    <li><a href="#">Contact</a></li>
                     <li>
-                        <button type="button" class="button hollow topbar-responsive-button">Categories</button>
+                        <a href="http://localhost:8080/">Home</a></li>
+                    <li>
+                        <a href="http://localhost:8080/profile">Your profile</a>
+                    </li>
+                    <li>
+                        <a href="http://localhost:8080/driver">Driver register</a>
+                    </li>
+                    <li>
+                        <a href="http://localhost:8080/passenger">Passenger register</a>
+                    </li>
+                    <li>
+                        <button type="button " class="button hollow topbar-responsive-button ">Contact us</button>
                     </li>
                 </ul>
             </div>
