--- a/public/index.html
+++ b/public/index.html
@@ -25,45 +25,48 @@
         <div id="topbar-responsive" class="topbar-responsive-links">
             <div class="top-bar-right">
                 <ul class="menu simple vertical medium-horizontal">
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">About</a></li>
-                    <li><a href="#">Services</a></li>
-                    <li><a href="#">Works</a></li>
-                    <li><a href="#">News</a></li>
-                    <li><a href="#">Contact</a></li>
                     <li>
-                        <button type="button" class="button hollow topbar-responsive-button">Categories</button>
+                        <a href="http://localhost:8080/">Home</a></li>
+                    <li>
+                        <a href="http://localhost:8080/profile">Your profile</a>
+                    </li>
+                    <li>
+                        <a href="http://localhost:8080/driver">Driver register</a>
+                    </li>
+                    <li>
+                        <a href="http://localhost:8080/passenger">Passenger register</a>
+                    </li>
+                    <li>
+                        <button type="button " class="button hollow topbar-responsive-button ">Contact us</button>
                     </li>
                 </ul>
             </div>
         </div>
     </nav>
 
-    <div class="hero-section">
-        <div class="hero-section-text">
+    <div class="hero-section ">
+        <div class="hero-section-text ">
             <h1>DCC</h1>
             <h2>Daily Commuter Carpool</h2>
             <h5>Reduce traffic and air pullution, Help a hard worker, Make journey to work more sociable</h5>
-            <a href="http://localhost:8080/passenger" class="button button-rounded-hover1">Join as <br> a Passenger</a>
-            <a href="http://localhost:8080/driver" class="button button-rounded-hover2">Join as a <br> Driver</a>
-            <a href="http://localhost:8080/login" class="button button-rounded-hover5"> Login as a<br> User</a>
+            <a href="http://localhost:8080/passenger" class="button button-rounded-hover1 ">Join as <br> a Passenger</a>
+            <a href="http://localhost:8080/driver" class="button button-rounded-hover2 ">Join as a <br> Driver</a>
+            <a href="http://localhost:8080/profile" class="button button-rounded-hover5 ">Sign in for<br> User</a>
         </div>
     </div>
 
-    <div class="flip-card card" ontouchstart="this.classList.toggle('hover');">
-        <div class="flip-card-inner">
-            <div class="flip-card-inner-front">
+    <div class="flip-card card " ontouchstart="this.classList.toggle( 'hover'); ">
+        <div class="flip-card-inner ">
+            <div class="flip-card-inner-front ">
                 <span>Book your next adventure</span>
             </div>
-            <div class="flip-card-inner-back">
-                <h3 class="flip-card-inner-back-title">Visit Yetiland</h3>
-                <p class="flip-card-inner-back-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo doloremque accusantium, repellendus ex debitis molestias, recusandae dignissimos delectus.</p>
-                <a href="#" class="button success">Book now</a>
+            <div class="flip-card-inner-back ">
+                <h3 class="flip-card-inner-back-title ">Visit Yetiland</h3>
+                <p class="flip-card-inner-back-text ">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo doloremque accusantium, repellendus ex debitis molestias, recusandae dignissimos delectus.</p>
+                <a href="#" class="button success ">Book now</a>
             </div>
         </div>
     </div>
-
-
 </body>
 
 </html>
