route map and and sign in(profile) js merged

--- a/public/Passenger.html
+++ b/public/Passenger.html
@@ -56,7 +56,7 @@
         </div>
         <div class="floated-label-wrapper ">
             <label for="pass ">Destination</label>
-            <input onclick="location.href='http://localhost:8080/';" type="text" id="destination" name="destination" placeholder="Destination ">
+            <input type="text" id="destination" name="destination" placeholder="Destination ">
         </div>
         <input class="button expanded" type="submit" value="Sign up ">
     </form>
