--- a/public/profile.html
+++ b/public/profile.html
@@ -73,6 +73,7 @@
         <main class="profile">
             <h1 id="welcome" style="width:95%">
             </h1>
+            <p id="saveType" style="display: none;"> </p>
             <h5 id="yourRoute" style="width:95%; padding-left: 20px; color: darkblue;">
                 Manage your route...
             </h5>
@@ -110,9 +111,6 @@
                 </form>
             </div>
             <div>
-                <form>
-                    <button id="passengerP" type="button" value="Submit">
-                </form>
             </div>
         </main>
     </div>
@@ -120,10 +118,8 @@
     <!-- Load the Google Maps aPI -->
     <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDE2yBUEZx3Cup_pwq22o_WferVgBpgSdE"></script>
     <!-- All of the script for multiple requests -->
-    <script type="text/javascript" src="js/routesMap.js"></script>
-    <!-- <script type="text/javascript" src="js/continue.js"></script> -->
     <script type="text/javascript" src="js/profile.js"></script>
-    <script type="text/javascript" src="js/routesMap.js"></script>
+    <!-- <script type="text/javascript" src="js/routesMap.js"></script> -->
     <script src="js/vendor/jquery.js "></script>
     <script src="js/vendor/what-input.js "></script>
     <script src="js/vendor/foundation.js "></script>
