--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
                     <li>
                         <a href="http://localhost:8080/">Home</a></li>
                     <li>
-                        <a href="http://localhost:8080/profile">Your profile</a>
+                        <a href="http://localhost:8080/profile">Sign in</a>
                     </li>
                     <li>
                         <a href="http://localhost:8080/driver">Driver register</a>
