--- a/public/profile.html
+++ b/public/profile.html
@@ -30,7 +30,7 @@
                     <li>
                         <a href="http://localhost:8080/">Home</a></li>
                     <li>
-                        <a href="http://localhost:8080/profile">Your profile</a>
+                        <a href="http://localhost:8080/profile">Sign in</a>
                     </li>
                     <li>
                         <a href="http://localhost:8080/driver">Driver register</a>
@@ -54,12 +54,12 @@
         <form id="signIn" class="callout text-center" style="width: 95%;margin: 1%;">
             <h5>Sign in</h5>
             <div class="floated-label-wrapper">
-                <label for="full-name">Name</label>
-                <input type="text" id="userName" name="full name input" placeholder="Name">
+                <label for="full-name">First Name</label>
+                <input type="text" id="fName" name="First name" placeholder="First name">
             </div>
             <div class="floated-label-wrapper">
-                <label for="pass">Origin</label>
-                <input type="text" id="userOrigin" name="origin" placeholder="Origin">
+                <label for="pass">User name</label>
+                <input type="text" id="uName" name="User name" placeholder="User name">
             </div>
             <div class="floated-label-wrapper">
                 <p style="float:left">User type</p>
