--- a/public/driver.html
+++ b/public/driver.html
@@ -28,7 +28,7 @@
                     <li>
                         <a href="http://localhost:8080/">Home</a></li>
                     <li>
-                        <a href="http://localhost:8080/profile">Your profile</a>
+                        <a href="http://localhost:8080/profile">Sign in</a>
                     </li>
                     <li>
                         <a href="http://localhost:8080/driver">Driver register</a>
@@ -47,8 +47,16 @@
     <form id="driver-form" class="callout text-center ">
         <h2>Driver Register</h2>
         <div class="floated-label-wrapper ">
-            <label for="full-name ">Name</label>
-            <input type="text" id="name" name="name" placeholder="Name">
+            <label for="first-name ">First name</label>
+            <input type="text" id="firstName" name="firstName" placeholder="First name">
+        </div>
+        <div class="floated-label-wrapper ">
+            <label for="last-name ">Last name</label>
+            <input type="text" id="lastName" name="lastName" placeholder="Last name">
+        </div>
+        <div class="floated-label-wrapper ">
+            <label for="user-name ">User name</label>
+            <input type="text" id="userName" name="userName" placeholder="User name">
         </div>
         <div class="floated-label-wrapper ">
             <label for="origin ">Origin</label>
@@ -67,6 +75,9 @@
     <script src="js/vendor/foundation.js "></script>
     <!-- <script src="js/app.js "></script> -->
     <script src="js/driver.js "></script>
+</body>
+
+</html>ript src="js/driver.js "></script>
 </body>
 
 </html>
