user routes options

--- a/public/profile.html
+++ b/public/profile.html
@@ -114,10 +114,9 @@
             <div style="width:95%">
                 <label for="list">Select a driver:</label>
                 <form style="float: left; width: 98%; height: 30px;" id="psgSelect">
-                    <select style="float: left; width: 85%; height: 100%;" id="psgSelect">
-                <option value="">Brice</option>
-                <option value="">Bernard</option>
-                <option value="">Joey</option>
+                    <select style="float: left; width: 85%; height: 100%;" id="select">
+                <option value=""> </option>
+                
                 </select>
                     <input style="height: 30px; background-color:green;" id="route" type="submit" value="Submit">
                 </form>
