new routes arrays can be generated

--- a/public/profile.html
+++ b/public/profile.html
@@ -115,7 +115,7 @@
                 <label for="list">Select a driver:</label>
                 <form style="float: left; width: 98%; height: 30px;" id="psgSelect">
                     <select style="float: left; width: 85%; height: 100%;" id="select">
-                <option value=""> </option>
+                <option value="0"> </option>
                 
                 </select>
                     <input style="height: 30px; background-color:green;" id="route" type="submit" value="Submit">
