almost done: companion selection, duration and time display

--- a/public/profile.html
+++ b/public/profile.html
@@ -95,8 +95,8 @@
                     <th>Direct duration</th>
                 </tr>
                 <tr>
-                    <td id="directDistance"></td>
-                    <td id="directTime"></td>
+                    <td id="directDistance">WAITING</td>
+                    <td id="directTime">WAITING</td>
                 </tr>
             </table>
             <table style="width:95%">
