--- a/public/profile.html
+++ b/public/profile.html
@@ -69,12 +69,12 @@
                 <option value="Passenger">Passenger</option>
               </select>
             </div>
-            <input class="button button-rounded-hover4 " type="submit" value="Submit">
+            <input class="button button-rounded-hover4" type="submit" value="Submit">
         </form>
         <!-- User info an routes display -->
         <main class="profile">
-            <h3 id="welcome" style="width:95%">
-            </h3>
+            <h4 id="welcome" style="width:95%">
+            </h4>
             <p id="saveType" style="display: none;"> </p>
             <h5 id="yourRoute" style="width:95%; padding-left: 10px; color: darkblue;">
                 Manage your route...
@@ -95,8 +95,8 @@
                     <th>Direct duration</th>
                 </tr>
                 <tr>
-                    <td id="directDistance">WAITING</td>
-                    <td id="directTime">WAITING</td>
+                    <td id="directDistance">wait...</td>
+                    <td id="directTime">wait...</td>
                 </tr>
             </table>
             <table style="width:95%">
@@ -111,15 +111,24 @@
                     <td id="difference">No selection</td>
                 </tr>
             </table>
+            <h5 id="companion" style="width:95%; padding-left: 10px; color: darkblue;">
+            </h5>
+            <table id="pRoute" style="width:95%; display: none;">
+                <tr>
+                    <th>Home address</th>
+                    <th>Work address</th>
+                </tr>
+                <tr>
+                    <td id="pOrigin"></td>
+                    <td id="pDestination"></td>
+                </tr>
+            </table>
             <div style="width:95%">
-                <label for="list">Select a driver:</label>
-                <form style="float: left; width: 98%; height: 30px;" id="psgSelect">
-                    <select style="float: left; width: 85%; height: 100%;" id="select">
-                <option value="0"> </option>
-                
+                <label id="list">Select a driver:</label>
+                <select style="float: left; width: 85%; height: 100%;" id="select">No selection
+                    <option value="0"> No selection </option>
                 </select>
-                    <input style="height: 30px; background-color:green;" id="route" type="submit" value="Submit">
-                </form>
+                <input class="button button button-rounded-hover5" id="merge" type="submit " value="Merge routes ">
             </div>
             <div>
             </div>
@@ -127,10 +136,10 @@
     </div>
 
     <!-- Load the Google Maps aPI -->
-    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDE2yBUEZx3Cup_pwq22o_WferVgBpgSdE"></script>
+    <script type="text/javascript " src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDE2yBUEZx3Cup_pwq22o_WferVgBpgSdE "></script>
     <!-- All of the script for multiple requests -->
-    <script type="text/javascript" src="js/profile.js"></script>
-    <!-- <script type="text/javascript" src="js/routesMap.js"></script> -->
+    <script type="text/javascript " src="js/profile.js "></script>
+    <!-- <script type="text/javascript " src="js/routesMap.js "></script> -->
     <script src="js/vendor/jquery.js "></script>
     <script src="js/vendor/what-input.js "></script>
     <script src="js/vendor/foundation.js "></script>
