backward arrow>orig forward arrow>dest + ORIG, DEST, PICK, DROP labels

--- a/public/Passenger.html
+++ b/public/Passenger.html
@@ -15,13 +15,16 @@
 </head>
 
 <body>
+    <!--  Header -->
     <nav class="top-bar topbar-responsive">
+        <!-- Company name -->
         <div class="top-bar-title">
             <span data-responsive-toggle="topbar-responsive" data-hide-for="medium">
             <button class="menu-icon" type="button" data-toggle></button>
           </span>
             <a class="topbar-responsive-logo" href="#"><strong>DCC</strong></a>
         </div>
+        <!-- Naigation bar -->
         <div id="topbar-responsive" class="topbar-responsive-links">
             <div class="top-bar-right">
                 <ul class="menu simple vertical medium-horizontal">
