--- a/public/driver.html
+++ b/public/driver.html
@@ -15,13 +15,16 @@
 </head>
 
 <body>
+    <!--  Header -->
     <nav class="top-bar topbar-responsive">
+        <!-- Company name -->
         <div class="top-bar-title">
             <span data-responsive-toggle="topbar-responsive" data-hide-for="medium">
             <button class="menu-icon" type="button" data-toggle></button>
           </span>
             <a class="topbar-responsive-logo" href="#"><strong>DCC</strong></a>
         </div>
+        <!-- Naigation bar -->
         <div id="topbar-responsive" class="topbar-responsive-links">
             <div class="top-bar-right">
                 <ul class="menu simple vertical medium-horizontal">
@@ -43,7 +46,7 @@
             </div>
         </div>
     </nav>
-
+    <!-- Registration form -->
     <form id="driver-form" class="callout text-center ">
         <h2>Driver Register</h2>
         <div class="floated-label-wrapper ">
@@ -66,14 +69,12 @@
             <label for="pass ">Destination</label>
             <input type="text" id="destination" name="destination" placeholder="Destination ">
         </div>
-        <!-- <input onclick="location.href='http://localhost:8080/';" class="button expanded" type="submit" value="Sign up"> -->
         <input class="button expanded" type="submit" value="Sign up">
     </form>
 
     <script src="js/vendor/jquery.js "></script>
     <script src="js/vendor/what-input.js "></script>
     <script src="js/vendor/foundation.js "></script>
-    <!-- <script src="js/app.js "></script> -->
     <script src="js/driver.js "></script>
 </body>
 
